--- a/themes/PaperMod/layouts/partials/extend_footer.html
+++ b/themes/PaperMod/layouts/partials/extend_footer.html
@@ -1,3 +1,25 @@
 {{- /* Footer custom content area start */ -}}
 {{- /*     Insert any custom code web-analytics, resources, etc. here */ -}}
 {{- /* Footer custom content area end */ -}}
+<div id="disclaimer-banner">
+  <div class="d-content">
+    <span>This site uses cookies to improve your experience on our website. By using and continuing to navigate this website, you accept this. <a href="https://tekcatz.com/privacy">Privacy Policy</a></span>
+    <button type="button" id="b-btn"><span>I understand</span></button>
+  </div>
+</div>
+<script>
+  function hideDisclaimer() {
+    document.getElementById('disclaimer-banner').style.display = 'none';
+  }
+
+  (function() {
+    if (localStorage.getItem('disclaimer-confirm')) {
+      hideDisclaimer();
+    }
+  })();
+
+  document.getElementById("b-btn").addEventListener('click', function() {
+    localStorage.setItem('disclaimer-confirm', 'true');
+    hideDisclaimer();
+  })
+</script>
