Change privacy policy language to Vietnamese

--- a/themes/PaperMod/layouts/partials/extend_footer.html
+++ b/themes/PaperMod/layouts/partials/extend_footer.html
@@ -3,8 +3,8 @@
 {{- /* Footer custom content area end */ -}}
 <div id="disclaimer-banner">
   <div class="d-content">
-    <span>This site uses cookies to improve your experience on our website. By using and continuing to navigate this website, you accept this. <a href="https://tekcatz.com/privacy">Privacy Policy</a></span>
-    <button type="button" id="b-btn"><span>I understand</span></button>
+    <span>Website này sử dụng cookies để cải thiện chất lượng dịch vụ và trải nghiệm người dùng. Bằng việc sử dụng và tương tác trên website, bạn đồng ý với <a href="https://tekcatz.com/privacy">Chính sách bảo mật</a> của chúng tôi.</span>
+    <button type="button" id="b-btn"><span>Tôi đã hiểu</span></button>
   </div>
 </div>
 <script>
