--- a/themes/PaperMod/layouts/partials/head.html
+++ b/themes/PaperMod/layouts/partials/head.html
@@ -36,6 +36,15 @@
 <meta name="naver-site-verification" content="{{ site.Params.analytics.naver.SiteVerificationTag }}">
 {{- end }}
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5NQ9WYKRVB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5NQ9WYKRVB');
+</script>
+
 {{- /* Styles */}}
 
 {{- /* includes */}}
